--- a/pollsApp/templates/index.html
+++ b/pollsApp/templates/index.html
@@ -4,16 +4,21 @@
 </head>
 <body>
 <h1>Know your Python!!</h1>
+<div>
+{% load staticfiles %}
+
+<link rel='stylesheet' type='text/css' href="{% static 'polls/style.css' %}" />
 
 {% if latest_question_list %}
-    <ul>
+    <ol>
     {% for question in latest_question_list %}
         <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
     {% endfor %}
-    </ul>
+    </ol>
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+</div>
 </body>
 </html
 
