--- a/pollsApp/templates/index.html
+++ b/pollsApp/templates/index.html
@@ -5,6 +5,7 @@
 <body>
 <h1>Know your Python!!</h1>
 <div>
+<p1>Below is the list of queries. Please click on the questio to proceed forward</p1>
 {% load staticfiles %}
 
 <link rel='stylesheet' type='text/css' href="{% static 'polls/style.css' %}" />
