--- a/pollsApp/templates/index.html
+++ b/pollsApp/templates/index.html
@@ -3,7 +3,7 @@
 <title>Polls App</title>
 </head>
 <body>
-<h1>Know your Python!!</h1>
+<h1>First commit</h1>
 <div>
 <p1>Below is the list of queries. Please click on the questio to proceed forward</p1>
 {% load staticfiles %}
