--- a/pollsApp/templates/index.html
+++ b/pollsApp/templates/index.html
@@ -3,9 +3,9 @@
 <title>Polls App</title>
 </head>
 <body>
-<h1>First commit</h1>
+<h1>Python know-how</h1>
 <div>
-<p1>Below is the list of queries. Please click on the questio to proceed forward</p1>
+<p1>Below is the list of queries. Please click on the question to proceed forward</p1>
 {% load staticfiles %}
 
 <link rel='stylesheet' type='text/css' href="{% static 'polls/style.css' %}" />
