--- a/pollsApp/templates/index.html
+++ b/pollsApp/templates/index.html
@@ -3,7 +3,7 @@
 <title>Polls App</title>
 </head>
 <body>
-<h1>Python know-how</h1>
+<h1>Welcome to the quiz</h1>
 <div>
 <p1>Below is the list of queries. Please click on the question to proceed forward</p1>
 {% load staticfiles %}
